# paymaster

./: .env  .gitmodules  LICENSE  README.md  protostar.toml  pyproject.toml  requirements.txt
examples/declaration/: paid_account_declaration.py
examples/transaction/: sample_transaction.py
src/cairo/contracts/: PaidAccount.cairo  library.cairo
src/cairo/contracts/interfaces/: IPaidAccount.cairo
src/cairo/paidaccount/: PaidAccount.cairo  library.cairo
src/cairo/paidaccount/interfaces/: IPaidAccount.cairo
src/cairo/payableaccount/: PayableAccount.cairo  library.cairo
src/cairo/payableaccount/interfaces/: IPayableAccount.cairo
src/python/connector/: __init__.py  connector.py  connector_utils.py
src/python/paymaster/: __init__.py  paid_account.py  paid_call.py  payable_account.py  payable_call.py
src/python/proxy/: __init__.py  custom_proxy_check.py
tests/cairo/account/: test_PaidAccount.cairo
tests/integration/: signers.py  utils.py
tests/integration/account/: test_Account.py
tests/integration/payableaccount/: test_Account.py
tests/mocks/: AccountReentrancy.cairo  Initializable.cairo
tests/python/declaration/: paid_account_declaration.py
tests/python/transaction/: sample_transaction.py
tests/unit/account/: constants.cairo  test_PaidAccount.cairo  test_PaidAccount_utils.cairo  tx_info_generation.cairo
tests/unit/payableaccount/: calls_generation.cairo  constants.cairo  test_PaidAccount.cairo
